Fix endianness issue in Oracle driver PR 50690 - Patch from Stefan Ruppert

git-svn-id: https://svn.apache.org/repos/asf/apr/apr/trunk@1065258 13f79535-47bb-0310-9956-ffa450edef68